# why-dot-fun

./: Cargo.toml  Dockerfile  README.md
migrations/: 20241113102717_1.down.sql  20241113102717_1.up.sql
src/: cache.rs  database.rs  main.rs  secrets.rs
src/api/: activate_sponsor.rs  attempt_list.rs  attempt_single.rs  deposit.rs  launchpad.rs  mod.rs  payment.rs  sponsor_list.rs  update_sponsor.rs  verify_winner.rs
src/claim/: mod.rs  page.rs  verify.rs
src/game/: challenge.rs  end.rs  gather.rs  judge.rs  mod.rs  name.rs  recording.rs  start.rs
src/review/: mod.rs  twitter.rs
src/solana/: generate_deposit.rs  generate_payment.rs  keys.rs  mod.rs  transfer.rs  verify_deposit.rs  verify_payment.rs
src/video/: background.rs  ffmpeg.rs  mod.rs  subtitles.rs
src/webcall/: check.rs  mod.rs  token.rs
static/: call.css  call.html  call.js  claim.css  review.css
templates/: claim.html  review.html
twilio/: Cargo.toml
twilio/src/: call.rs  lib.rs  message.rs  twiml.rs  webhook.rs
twilio/src/twiml/: gather.rs  reject.rs  say.rs
