[package]
name = "gamecall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
async-openai = "0.26"
axum = { version = "0.7", features = ["macros"] }
axum-auth = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.11"
jsonwebtoken = "9.3"
log = "0.4"
infer = "0.16"
reqwest = "0.12"
reqwest-oauth1 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srtlib = "0.2"
static-toml = "1.2"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.41", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tower_governor = "0.4"
twilio = { git = "https://github.com/Nelis-sol/new-twilio.git" }
twitter-v2 = "0.1"
solana-sdk = "2.1.4"
spl-token = "7.0.0"
solana-client = "2.1.4"
spl-associated-token-account = "6.0.0"
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-credential-types = "1.2.1"
base64 = "0.22.1"
bincode = "1.3.3"
