[package]
name = "twilio"
version = "1.1.0"
description = "Rust bindings for the Twilio API"
readme = "README.md"
repository = "https://github.com/neil-lobracco/twilio-rs"
license = "MIT"
authors = [
    "Neil LoBracco <neil.lobracco@gmail.com>",
    "Lance Carlson <lancecarlson@gmail.com>",
]
keywords = ["twilio", "rust"]
edition = "2018"

[dependencies]
base64 = "0.22"
headers = "0.4"
hyper = "1.4"
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.10", features = ["derive"] }
sha1 = "0.10"
hmac = "0.12"
url = "2.0"

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
hyper = { version = "1.4", features = ["server"] }
